# hello-opengl

./: .gitignore  CMakeLists.txt  README.md  Readme.md  check.json
include/glad/: glad.h
src/: WinMan.cpp  WinMan.hpp  glad.c  hello-triangle-02.Xcpp  hello-window.cpp  main.cpp  main.cppBkp  shader.frag  shader.vert
src/includes/: MyClass.cpp  MyClass.h
src/includes/glad/: glad.c  glad.h
